Release Minecraft Chat v1.8
Reduce background battery, memory, CPU, network, and thread usage while preserving server connection and chat behavior.